build_out3.txt
Reusing configuration cache.
> Task :app:preBuild UP-TO-DATE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:preDebugNoMinifyBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:extractProguardFiles UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:validateSigningDebug UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:writeDebugAppMetadata UP-TO-DATE
> Task :app:writeDebugSigningConfigVersions UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:configureNdkBuildDebug[x86]
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:configureNdkBuildDebug[x86_64]
> Task :app:configureNdkBuildDebug[arm64-v8a]
> Task :app:processDebugResources UP-TO-DATE
> Task :app:configureNdkBuildDebug[armeabi-v7a]
> Task :app:compileDebugKotlin UP-TO-DATE
> Task :app:processDebugJavaRes UP-TO-DATE
> Task :app:mergeDebugJavaResource UP-TO-DATE
> Task :app:buildNdkBuildDebug[x86]
> Task :app:buildNdkBuildDebug[x86_64]
> Task :app:buildNdkBuildDebug[arm64-v8a]
> Task :app:buildNdkBuildDebug[armeabi-v7a]
> Task :app:mergeDebugNativeLibs UP-TO-DATE
> Task :app:stripDebugDebugSymbols UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
C:\Users\xyz\Documents\Projects\TBoard\app\src\main\java\helium314\keyboard\latin\LatinIME.java:1378: error: cannot find symbol
        builder.setPositiveButton(helium314.keyboard.latin.R.string.config_save, (dialog, which) -> {
                                                                   ^
  symbol:   variable config_save
  location: class string
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: C:\Users\xyz\Documents\Projects\TBoard\app\src\main\java\helium314\keyboard\keyboard\PointerTracker.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/xyz/Documents/Projects/TBoard/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  Note: C:\Users\xyz\Documents\Projects\TBoard\app\src\main\java\helium314\keyboard\keyboard\PointerTracker.java uses unchecked or unsafe operations.
  C:\Users\xyz\Documents\Projects\TBoard\app\src\main\java\helium314\keyboard\latin\LatinIME.java:1378: error: cannot find symbol
          builder.setPositiveButton(helium314.keyboard.latin.R.string.config_save, (dialog, which) -> {
                                                                     ^
    symbol:   variable config_save
    location: class string
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 11s
42 actionable tasks: 9 executed, 33 up-to-date
Configuration cache entry reused.
